2007-07-06  Lluis Sanchez Gual <lluis@novell.com> 

	* MakefileOptionPanelWidget.cs, MakefileData.cs: Load configure.ac in
	  place of configure.in if it exist.
	* gtk-gui/objects.xml: Updated.

2007-06-18  Ankit Jain  <jankit@novell.com>

	* MakefileOptionPanelWidget.cs: On loading a new makefile, try to guess
	possible variables and prefixes for various lists like files, references etc.
	If guess'ing fails, then try some usual variable names.
	When a variable is selected in the combo by the user, try to guess the
	prefix.

2007-06-18  Ankit Jain  <jankit@novell.com>

	* MakefileData.cs (PackagedAssemblyNames): New. Table for mapping short
	assembly names (like System.Xml) to their full names.
	(ParseReferenceAsGac): Use the new PackagedAssemblyNames table. This will
	help avoid doing Assembly.Load to find full names for names
	like System.Xml . Speeds up loading for large projects.

2007-06-14  Ankit Jain  <jankit@novell.com>

	* MakefileData.cs (PkgManagerTable): New. A global table to keep weak
	references to ConfiguredPackagesManager objects.
	(UpdateProject): Use the new PkgManagerTable.
	(ConfiguredPackagesManager.LastWriteTime): New.

2007-06-07  Ankit Jain  <jankit@novell.com>

	* AutotoolsContext.cs (NormalizeRelativePath): Moved to Runtime.FileService .
	Track api change.
	* SimpleProjectMakefileHandler.cs: Track api change.
	* SolutionDeployer.cs: Track api change.

2007-05-31  Ankit Jain  <jankit@novell.com>

	* SimpleProjectMakefileHandler.cs: Comment out all .pc file generation
	related code. It is handled by the deployment infrastructure.
	* SolutionDeployer.cs (GenerateFiles): Remove code related to .pc file
	generation.

	SolutionOptionsPanel.cs is not used now.
	* Makefile.am: Remove SolutionOptionsPanel.cs from the list of files.
	* MonoDevelop.Autotools.mdp: Likewise
	* MonoDevelop.Autotools.addin.xml: Remove extensions related to
	SolutionOptionsPanel.

2007-05-29  Ankit Jain  <jankit@novell.com>
